--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Dicionario Aberto</string>
+    <string name="unknown_error">Entrada não encontrada</string>
 </resources>
